tests/snapshots/scripts_sanitized/Admin API Tool/FileMaker Client Settings - ID 148/Update FileMaker Pro and FileMaker Go Session Timeout - ID 151.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Update FileMaker Pro and FileMaker Go Session Timeout
#  HISTORY:
     - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
     - Modified:  2019-04-23 by Mike Duncan, update to v2 admin api

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/fmclients/sessiontimeout/progo" ]
Variable setzen [ $json ; JSONSetElement ( ""
				 ;[ "enableProGoTimeout"; FMS__fmserver::enableProGoTimeout ; JSONBoolean ]
				 ;[ "sessionTimeout"; FMS__fmserver::sessionTimeout_progo ; JSONNumber ]
				) ]
Variable setzen [ $curloptions ; " --request PATCH" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --data @$json" &
				" --dump-header $$my.headers" ]
# set api update variable
Variable setzen [ $$API.UPDATE ; "1" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
